Fixes for safari overflow

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -61,7 +61,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 2px;
     top: 9vh;
     right: 0px;
     height: 100%;
